<resources>
    <string name="app_name">Bin Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_account">Account</string>
    <string name="back">Back</string>
    <string name="classification_result">Classification Result</string>
    <string name="waste_image">Waste Image</string>
    <string name="waste_name">Nama Limbah</string>
    <string name="waste_class">Kelas Limbah</string>
    <string name="return_button">Return</string>
    <string name="save_button">Save</string>
    <string name="percentage">0%</string>
    <string name="description_header">Description</string>
    <string name="method_header">Recycling Method</string>
    <string name="benefits_header">Recycling Benefits</string>
    <string name="outcome_header">Recycling Outcome</string>
    <string name="battery_description">Batteries are electronic waste from energy storage devices that contain hazardous materials such as mercury and lead. Used batteries can increase the volume of dangerous waste in landfills, pose risks to human health, and harm ecosystems.</string>
    <string name="battery_recycling_method">
    Used batteries should be taken to a specialized recycling center or drop-off box at electronics stores. The recycling process for batteries includes:\n
    • Used batteries are collected from various sources such as electronic devices.\n
    • Batteries are separated by type.\n
    • Batteries are cleaned to remove contamination and are mechanically or chemically crushed.\n
    • Valuable materials such as lithium, cobalt, and nickel are extracted for reuse.\n
    • Residual materials are processed for safe disposal or repurposed as other materials.
    </string>
    <string name="battery_recycling_benefits">Reduces hazardous waste that can pollute soil and water while lowering the demand for mining new materials like lithium and cobalt.</string>
    <string name="battery_recycling_outcome">New batteries, electronic components, or other products like construction materials.</string>
    <string name="biological_description">Biological waste consists of organic matter from living organisms, such as food scraps, leaves, and animal waste. This waste decomposes naturally with the help of microorganisms. Excessive amounts can cause environmental pollution, health risks, soil degradation, and increased waste volume.</string>
    <string name="biological_recycling_method">
    Biological waste such as dry leaves and food scraps can be processed into compost through organic recycling methods. The recycling process for biological waste includes:\n
    • Collect organic waste and place it in a compost bin or soil pit.\n
    • Ensure a mix of "brown" materials like dry leaves and "green" materials like food scraps.\n
    • Stir regularly to maintain aeration.\n
    • Wait a few weeks to obtain the compost.
    </string>
    <string name="biological_recycling_benefits">Reduces waste ending up in landfills and produces organic fertilizer.</string>
    <string name="biological_recycling_outcome">Compost fertilizer, bioenergy, animal feed, paper, concrete bricks, and textiles.</string>
    <string name="brown_glass_description">Brown glass comes from items like beverage bottles, cosmetic containers, or medicine jars. It takes a long time to decompose in landfills and can pollute the environment. However, it is durable and can be recycled without losing quality, making proper recycling essential for environmental sustainability.</string>
    <string name="brown_glass_recycling_method">
    Brown glass can be recycled by taking it to a specialized recycling center or drop-off box. The recycling process for brown glass includes:\n
    • Collect used brown glass bottles or containers and separate them from other materials like metal and plastic.\n
    • Wash the glass to remove liquid residues, labels, and dirt.\n
    • Sort glass by color, ensuring only brown glass is processed.\n
    • Break the glass into small pieces (cullet).\n
    • Melt the cullet in a furnace to produce molten glass and shape it into new products.
    </string>
    <string name="brown_glass_recycling_benefits">Reduces landfill waste, saves energy, lowers the need for raw materials like silica sand, and minimizes environmental impact.</string>
    <string name="brown_glass_recycling_outcome">New beverage bottles, pharmaceutical containers like syrup bottles, cosmetic packaging such as cream or essential oil bottles, light bulb protective covers, as well as decorative products like mosaics, brown glass tiles, or tabletop surfaces.</string>
    <string name="cardboard_description">Cardboard waste comes from boxes or packaging commonly used for shipping and storage. If not recycled, cardboard can contribute to increased waste volume in landfills and environmental pollution.</string>
    <string name="cardboard_recycling_method">
    Used cardboard should be sent to a recycling center for further processing. The recycling process for cardboard includes:\n
    • Collect used cardboard from households, stores, or offices.\n
    • Separate the cardboard from other materials such as plastic, styrofoam, or other packaging materials.\n
    • Clean the cardboard to remove dirt, grease, or other adhered substances.\n
    • Break the cardboard into small pieces.\n
    • Turn the pieces into pulp (paper slurry) by mixing them with water.\n
    • Dry the pulp and form it into new sheets, such as paper or new cardboard packaging.
    </string>
    <string name="cardboard_recycling_benefits">By recycling cardboard, we can reduce the need for new wood to produce packaging, helping to protect forests and natural ecosystems. Additionally, the recycling process supports the local economy by creating job opportunities in the waste processing industry. Recycled cardboard can also be used to improve soil quality, for example, by turning it into compost that is beneficial for agriculture.</string>
    <string name="cardboard_recycling_outcome">Paper, new packaging materials, building products, or components for organic fertilizers.</string>
    <string name="clothes_description">Clothes are leftover materials or unused garments that are old, damaged, or discarded. Unprocessed clothing waste can generate greenhouse gases (such as methane) when decomposing in landfills. Synthetic materials like polyester also pollute the environment because they take hundreds of years to decompose, potentially releasing microplastics into the ecosystem.</string>
    <string name="clothes_recycling_method">
    Clothing waste can be transformed into new products such as rags, insulation materials, or recycled yarn. Another alternative is to donate wearable clothes or repurpose them for DIY projects. The general process of recycling clothes includes:\n
    • Collect used clothes and separate them based on condition (wearable clothes and those that are damaged).\n
    • Wash them to remove dirt or any remaining chemicals.\n
    • Sort fabrics such as cotton, wool, or synthetics for separate processing.\n
    • Shred or cut the clothes into fibers or smaller materials.\n
    • Repurpose them into new products. The fabric fibers can be processed into insulation material or cleaning rags.
    </string>
    <string name="clothes_recycling_benefits">Reduces textile waste, carbon emissions, and resource consumption like water and energy needed for new textile production.</string>
    <string name="clothes_recycling_outcome">Cleaning rags, recycled yarn, insulation materials, carpets, or innovative products.</string>
    <string name="green_glass_description">Green glass is waste from bottles used for drinks like wine, soda, or alcoholic beverages. It takes a long time to decompose in landfills but can be fully recycled without quality loss, supporting environmental sustainability.</string>
    <string name="green_glass_recycling_method">
    Green glass can be recycled by taking it to a specialized recycling center or drop box. The recycling process for green glass includes:\n
    • Collect used green glass bottles and separate them from other materials like metal and plastic.\n
    • Wash the glass to remove liquids, labels, and dirt.\n
    • Sort glass by color, processing only green glass.\n
    • Break the glass into small pieces (cullet).\n
    • Melt the cullet in a furnace to produce liquid glass and shape it into new products.
    </string>
    <string name="green_glass_recycling_benefits">Reduces landfill waste, saves energy, lowers the need for raw materials like silica sand, and reduces environmental impact.</string>
    <string name="green_glass_recycling_outcome">Wine or soda bottles, pharmaceutical or cosmetic containers like serum bottles and cream jars, and decorative materials like mosaics, green glass tiles, or ornaments.</string>
    <string name="metal_description">Metal includes various types such as aluminum, steel, and copper, commonly used in industrial and consumer products. Metal waste takes a long time to decompose and can pollute the environment if improperly managed.</string>
    <string name="metal_recycling_method">
    Used metals should be taken to a specialized recycling center for further processing. The recycling process of metals involves the following steps:\n
    • Separate metals by type (e.g., aluminum, steel, copper).\n
    • Clean metals to remove dirt or chemicals.\n
    • Melt the metals in a furnace to remove impurities.\n
    • Recast the molten metal into new materials or other metal products.
    </string>
    <string name="metal_recycling_benefits">Saves significant energy (e.g., recycling aluminum saves 95% energy compared to producing new aluminum), reduces pollution, and minimizes the need for new metal mining.</string>
    <string name="metal_recycling_outcome">Cans, construction materials, or automotive components.</string>
    <string name="paper_description">Paper waste originates from wood-based materials like books, newspapers, or packaging. Without proper management, paper waste can accumulate in landfills, causing environmental pollution and wasting natural resources.</string>
    <string name="paper_recycling_method">
    Used paper can be recycled into new useful products through the following process:\n
    • Collect used paper from households, schools, offices, or businesses.\n
    • Sort paper by type (e.g., white paper, newspaper, or cardboard) and remove foreign materials like staples, plastic, or glue.\n
    • Shred the paper using water and chemicals to form pulp.\n
    • Remove unwanted materials like ink or dyes through filtering or de-inking processes.\n
    • The clean pulp is then reformed into new products such as writing paper, cardboard, or other paper-based items.
    </string>
    <string name="paper_recycling_benefits">Reduces deforestation, as recycled paper replaces the need for wood-based materials.</string>
    <string name="paper_recycling_outcome">Writing or printing paper, packaging products like cardboard, tissue paper, newspapers, or decorative paper.</string>
    <string name="plastic_description">Plastic is a synthetic material widely used in packaging, household items, and various other products. It is one of the most challenging wastes to decompose naturally, contributing to pollution in oceans and soil, and threatening wildlife.</string>
    <string name="login_title">Hello,</string>
    <string name="btnLogin">Login</string>
    <string name="or">Or</string>
    <string name="btnGoRegister">Register</string>
    <string name="second_login_title">Welcome</string>
    <string name="registerTitle">Create</string>
    <string name="text_EdtName">username</string>
    <string name="textBtnRegister">Register</string>
    <string name="secondRegisterTitle">Account</string>
</resources>