<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cloud_based_recyclable_household_waste_classification.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.cloud_based_recyclable_household_waste_classification.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/saved_fragment" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.cloud_based_recyclable_household_waste_classification.ui.Account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>