<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomEmailTextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_textViewTitleLogin"
        tools:alpha="100">

        <com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomEmailTextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomEmailTextInputLayout>

    <com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomPasswordTextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
        app:passwordToggleEnabled="true"
        tools:alpha="100">

        <com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomPasswordTextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.example.cloud_based_recyclable_household_waste_classification.ui.custom_view.CustomPasswordTextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/AllCenterButtonStyles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
        tools:alpha="100" />

    <TextView

        android:id="@+id/textViewTitleLogin"
        style="@style/HeadingXL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        android:text="@string/login_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:alpha="100" />

        <TextView

            android:id="@+id/second_textViewTitleLogin"
            style="@style/HeadingXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/second_login_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewTitleLogin"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLogin"
            tools:alpha="100" />

    <TextView
        android:id="@+id/textView_OrRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:alpha="100" />

    <Button
        android:id="@+id/buttonGoRegister"
        style="@style/AllCenterButtonStyles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:alpha="0"
        android:text="@string/btnGoRegister"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView_OrRegister"
        app:layout_constraintVertical_bias="0.0"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>
